--- a/ShoppingListProject/app/src/main/res/values-ldpi/dimens.xml
+++ b/ShoppingListProject/app/src/main/res/values-ldpi/dimens.xml
@@ -4,4 +4,6 @@
 	<dimen name="textSize">15.3sp</dimen>
 	<dimen name="tvHeight">24dp</dimen>
 	<dimen name="sideMenuIconSize">7.5dp</dimen>
+	<dimen name="warningTextSize">19.6sp</dimen>
+	<dimen name="warningSignSize">20dp</dimen>
 </resources>
