--- a/ShoppingListProject/app/src/main/res/layout/activity_main.xml
+++ b/ShoppingListProject/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -32,13 +31,14 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <FrameLayout
-            android:id="@+id/container"
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/nav_host_fragment_content_main"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/nav_graph" />
+
     </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
@@ -46,16 +46,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:visibility="visible"
         android:animateLayoutChanges="true"
         android:fitsSystemWindows="true"
+        android:visibility="visible"
         app:itemIconTint="@color/colorAccent"
         app:itemTextColor="@color/colorPrimaryDark">
 
         <FrameLayout
             android:id="@+id/sideMenuFrameLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"/>
+
 
     </com.google.android.material.navigation.NavigationView>
 </androidx.drawerlayout.widget.DrawerLayout>
