--- a/ShoppingListProject/app/src/main/res/values-xxhdpi/dimens.xml
+++ b/ShoppingListProject/app/src/main/res/values-xxhdpi/dimens.xml
@@ -2,6 +2,8 @@
 	<dimen name="toolbar_textSize">16sp</dimen>
 	<dimen name="toolbarHeight">51.5dp</dimen>
 	<dimen name="textSize">14sp</dimen>
+	<dimen name="warningSignSize">80dp</dimen>
+	<dimen name="warningTextSize">18sp</dimen>
 	<dimen name="tvHeight">96.2dp</dimen>
 
 	<dimen name="sideMenuIconSize">30dp</dimen>
