--- a/ShoppingListProject/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/ShoppingListProject/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -4,4 +4,6 @@
 	<dimen name="textSize">14.3sp</dimen>
 	<dimen name="tvHeight">108.2dp</dimen>
 	<dimen name="sideMenuIconSize">33.8dp</dimen>
+	<dimen name="warningTextSize">18.4sp</dimen>
+	<dimen name="warningSignSize">90dp</dimen>
 </resources>
