created my task recycler view and add new task view adding dummy task in list

--- a/ShoppingListProject/app/src/main/res/layout/recycler_view_template.xml
+++ b/ShoppingListProject/app/src/main/res/layout/recycler_view_template.xml
@@ -24,7 +24,8 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
+            app:layout_constraintVertical_chainStyle="packed"
+            android:contentDescription="@string/app_title" />
 
         <TextView
             android:id="@+id/textView"
@@ -45,6 +46,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:visibility="gone"
+        android:layout_margin="@dimen/smaller_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
