--- a/ShoppingListProject/app/src/main/res/values/styles.xml
+++ b/ShoppingListProject/app/src/main/res/values/styles.xml
@@ -1,6 +1,10 @@
 <resources>
 
     <!-- Base application theme. -->
+    <style name="launcherStyle" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@android:color/darker_gray</item>
+    </style>
+
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
