fixed folder structure for mvvm and removed presentation and domain layout

--- a/ShoppingListProject/app/src/main/res/navigation/nav_graph.xml
+++ b/ShoppingListProject/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/myTaskListFragment"
-        android:name="com.aayush.shoppinglistapp.ui.my_task_list.MyTaskListFragment"
+        android:name="com.aayush.shoppinglistapp.view.my_task_list.MyTaskListFragment"
         android:label="fragment_my_task_list"
         tools:layout="@layout/fragment_my_task_list" />
 </navigation>
