--- a/ShoppingListProject/app/src/main/res/drawable/shape_rectangle.xml
+++ b/ShoppingListProject/app/src/main/res/drawable/shape_rectangle.xml
@@ -5,6 +5,6 @@
     <solid android:color="#ffffff" />
 
     <stroke
-        android:width="1dp"
-        android:color="@android:color/darker_gray" />
+        android:width="0.8dp"
+        android:color="@color/boundaryColor" />
 </shape>
