--- a/ShoppingListProject/app/src/main/res/layout/fragment_my_task_list.xml
+++ b/ShoppingListProject/app/src/main/res/layout/fragment_my_task_list.xml
@@ -4,61 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.my_task_list.MyTaskListFragment">
+    tools:context=".view.my_task_list.MyTaskListFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/newTaskLayout"
-        android:layout_width="match_parent"
+    <include
+        android:id="@+id/newTaskView"
+        layout="@layout/add_new_task_layout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/shape_rectangle"
-        android:paddingVertical="@dimen/smaller_margin"
-        android:translationZ="100dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/newTaskEditText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:hint="@string/new_task_str"
-            android:maxLines="5"
-            android:paddingHorizontal="@dimen/smaller_margin"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/priorityIcon"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/addTaskButton"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/addTaskButton"
-            android:layout_width="@dimen/sideMenuIconSize"
-            android:layout_height="@dimen/sideMenuIconSize"
-            android:background="@drawable/ic_baseline_add_circle_24"
-            app:layout_constraintBottom_toBottomOf="@+id/newTaskEditText"
-            app:layout_constraintEnd_toStartOf="@+id/newTaskEditText"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_chainStyle="spread_inside"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/newTaskEditText" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/priorityIcon"
-            android:layout_width="@dimen/sideMenuIconSize"
-            android:layout_height="@dimen/sideMenuIconSize"
-            app:layout_constraintBottom_toBottomOf="@+id/newTaskEditText"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/newTaskEditText"
-            app:layout_constraintTop_toTopOf="@+id/newTaskEditText" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <include
         android:id="@+id/myTaskListView"
         layout="@layout/recycler_view_template"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
