--- a/ShoppingListProject/app/src/main/res/layout/fragment_side_menu.xml
+++ b/ShoppingListProject/app/src/main/res/layout/fragment_side_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.side_fragment.SideMenuFragment">
+    tools:context=".view.side_fragment.SideMenuFragment">
 
     <include
         android:id="@+id/myTaskList"
