--- a/ShoppingListProject/app/src/main/res/layout/toolbar_layout.xml
+++ b/ShoppingListProject/app/src/main/res/layout/toolbar_layout.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
-    android:background="@android:color/holo_blue_bright"
+    android:background="@color/colorPrimary"
     android:layout_height="wrap_content"
     android:layout_width="match_parent">
 
