--- a/ShoppingListProject/app/src/main/res/values/dimens.xml
+++ b/ShoppingListProject/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
 	<dimen name="warningTextSize">9.8sp</dimen>
 	<dimen name="warningSignSize">80dp</dimen>
 	<dimen name="smaller_margin">5dp</dimen>
+	<dimen name="widthBoundary">0.8</dimen>
 </resources>
